Remove DeepSeek references across codebase
- Remove DeepSeek from supported LLM providers
- Remove DeepSeek API key from .env.example
- Remove DeepSeek provider implementation from client.py
- Update config comments to only list OpenAI and Anthropic
- Update README to reflect OpenAI and Anthropic as supported providers
- Simplify LLM provider logic to two providers only

--- a/config.yaml
+++ b/config.yaml
@@ -7,7 +7,7 @@ mode: paper
 llm:
   # Semantic Analysis - for macro/micro strategy analysis
   semantic:
-    provider: openai  # openai, anthropic, deepseek
+    provider: openai  # openai, anthropic
     model: gpt-5-2025-08-07
     # Alternative: claude-sonnet-4-5-20250514 (anthropic)
     temperature: 0.7
